fix some errors. now able to see the progress
